--- a/src/Pages/Tweets.css
+++ b/src/Pages/Tweets.css
@@ -1,5 +1,5 @@
 .tweets {
   flex: 1 0 80vh;
-  border: 1px solid var(--main-border-color);
+  border: 1px solid var(--tweets-component-color);
   overflow-y: scroll;
 }
