--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   font-size: 16px;
   margin: 0;
   padding: 0;
-  font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+  font-family: "Spoqa Han Sans Neo", "sans-serif";
 }
 
 :root {
@@ -15,9 +15,9 @@
   --bold-text-color: black;
   --button-text-color: white;
   --shade-color: var(--gray-200); /*#e6e6e6*/
-  --mypage-component-color: #eb9705;
-  --about-component-color: #097e4d;
-  --tweets-component-color: #003380;
+  --mypage-component-color: #9481ff;
+  --about-component-color: #fbc932;
+  --tweets-component-color: #f84242;
 }
 
 body {
